--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "license": "MIT",
   "scripts": {
-    "start": "rollup -c -w"
+    "start": "rollup -c -w",
+     "test": "mocha -r ts-node/register tests/**/*.spec.ts"
   },
   "dependencies": {
     "phaser": "^3.22.0",
@@ -13,8 +14,13 @@
     "@rollup/plugin-html": "^0.1.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-typescript": "^2.1.0",
+    "@types/chai": "^4.2.7",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.0",
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-serve": "^1.0.1",
+    "ts-node": "^8.6.2",
     "tslib": "^1.10.0"
   }
 }
