--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,11 @@
     "strictNullChecks": true,
     "alwaysStrict": true,
     "esModuleInterop": true
-  }
+  },
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "./src/**/*.spec.ts"
+  ]
 }
